--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
 			<!-- BEGIN sidebar menu -->
 			<div id="slider" class="side__menu">
 				<!-- Menu arrow -->
-				<i class="fas fa-arrow-circle-right menu__arrow fa-rotate-180"></i>
+				<i class="fas fa-arrow-circle-right menu__arrow"></i>
 				<!-- BEGIN selections html -->
 				<div id="work" class="setting__container">
 					<p class="setting__text">When will you work?</p>
 					<div class="drop__menu">
-						<select name="work" id="work_selection_1" class="selection__drop">
+						<select
+							name="work"
+							id="work_selection"
+							class="selection__drop work__drop"
+						>
 							<option value="0">6am to 8am</option>
 							<option value="1">7am to 9am</option>
 							<option value="2">8am to 10am</option>
@@ -43,11 +47,15 @@
 				<div id="study" class="setting__container">
 					<p class="setting__text">When will you study?</p>
 					<div class="drop__menu">
-						<select name="study" id="study_selection_2" class="selection__drop">
-							<option value="9-2">9am to 2pm</option>
-							<option value="10-3">10am to 3pm</option>
-							<option value="11-4">11am to 4pm</option>
-							<option value="12-5">12pm to 5pm</option>
+						<select
+							name="study"
+							id="study_selection"
+							class="selection__drop study__drop"
+						>
+							<option value="0">9am to 2pm</option>
+							<option value="1">10am to 3pm</option>
+							<option value="2">11am to 4pm</option>
+							<option value="3">12pm to 5pm</option>
 						</select>
 					</div>
 				</div>
@@ -55,11 +63,15 @@
 				<div id="relax" class="setting__container">
 					<p class="setting__text">When will you relax?</p>
 					<div class="drop__menu">
-						<select name="relax" id="relax_selection_3" class="selection__drop">
-							<option value="3-9">3pm to 9pm</option>
-							<option value="4-10">4pm to 10pm</option>
-							<option value="5-10">5pm to 10pm</option>
-							<option value="6-10">6pm to 10pm</option>
+						<select
+							name="relax"
+							id="relax_selection"
+							class="selection__drop relax__drop"
+						>
+							<option value="0">3pm to 9pm</option>
+							<option value="1">4pm to 10pm</option>
+							<option value="2">5pm to 10pm</option>
+							<option value="3">6pm to 10pm</option>
 						</select>
 					</div>
 				</div>
