--- a/index.html
+++ b/index.html
@@ -36,10 +36,30 @@
 							id="work_selection"
 							class="selection__drop work__drop"
 						>
-							<option value="0">6am to 8am</option>
-							<option value="1">7am to 9am</option>
-							<option value="2">8am to 10am</option>
-							<option value="3">9am to 11am</option>
+							<option value="0">12AM - 1AM</option>
+							<option value="1">1AM - 2AM</option>
+							<option value="2">2AM - 3AM</option>
+							<option value="3">3AM - 4AM</option>
+							<option value="4">4AM - 5AM</option>
+							<option value="5">5AM - 6AM</option>
+							<option value="6">6AM - 7AM</option>
+							<option value="7">7AM - 8AM</option>
+							<option value="8" selected="selected">8AM - 9AM</option>
+							<option value="9">9AM - 10AM</option>
+							<option value="10">10AM - 11AM</option>
+							<option value="11">11AM - 12PM</option>
+							<option value="12">12PM - 1PM</option>
+							<option value="13">1PM - 2PM</option>
+							<option value="14">2PM - 3PM</option>
+							<option value="15">3PM - 4PM</option>
+							<option value="16">4PM - 5PM</option>
+							<option value="17">5PM - 6PM</option>
+							<option value="18">6PM - 7PM</option>
+							<option value="19">7PM - 8PM</option>
+							<option value="20">8PM - 9PM</option>
+							<option value="21">9PM - 10PM</option>
+							<option value="22">10PM - 11PM</option>
+							<option value="23">11PM - 12AM</option>
 						</select>
 					</div>
 				</div>
@@ -52,10 +72,30 @@
 							id="study_selection"
 							class="selection__drop study__drop"
 						>
-							<option value="0">9am to 2pm</option>
-							<option value="1">10am to 3pm</option>
-							<option value="2">11am to 4pm</option>
-							<option value="3">12pm to 5pm</option>
+							<option value="0">12AM - 1AM</option>
+							<option value="1">1AM - 2AM</option>
+							<option value="2">2AM - 3AM</option>
+							<option value="3">3AM - 4AM</option>
+							<option value="4">4AM - 5AM</option>
+							<option value="5">5AM - 6AM</option>
+							<option value="6">6AM - 7AM</option>
+							<option value="7">7AM - 8AM</option>
+							<option value="8">8AM - 9AM</option>
+							<option value="9">9AM - 10AM</option>
+							<option value="10">10AM - 11AM</option>
+							<option value="11">11AM - 12PM</option>
+							<option value="12">12PM - 1PM</option>
+							<option value="13">1PM - 2PM</option>
+							<option value="14" selected="selected">2PM - 3PM</option>
+							<option value="15">3PM - 4PM</option>
+							<option value="16">4PM - 5PM</option>
+							<option value="17">5PM - 6PM</option>
+							<option value="18">6PM - 7PM</option>
+							<option value="19">7PM - 8PM</option>
+							<option value="20">8PM - 9PM</option>
+							<option value="21">9PM - 10PM</option>
+							<option value="22">10PM - 11PM</option>
+							<option value="23">11PM - 12AM</option>
 						</select>
 					</div>
 				</div>
@@ -68,10 +108,30 @@
 							id="relax_selection"
 							class="selection__drop relax__drop"
 						>
-							<option value="0">3pm to 9pm</option>
-							<option value="1">4pm to 10pm</option>
-							<option value="2">5pm to 10pm</option>
-							<option value="3">6pm to 10pm</option>
+							<option value="0">12AM - 1AM</option>
+							<option value="1">1AM - 2AM</option>
+							<option value="2">2AM - 3AM</option>
+							<option value="3">3AM - 4AM</option>
+							<option value="4">4AM - 5AM</option>
+							<option value="5">5AM - 6AM</option>
+							<option value="6">6AM - 7AM</option>
+							<option value="7">7AM - 8AM</option>
+							<option value="8">8AM - 9AM</option>
+							<option value="9">9AM - 10AM</option>
+							<option value="10">10AM - 11AM</option>
+							<option value="11">11AM - 12PM</option>
+							<option value="12">12PM - 1PM</option>
+							<option value="13">1PM - 2PM</option>
+							<option value="14">2PM - 3PM</option>
+							<option value="15">3PM - 4PM</option>
+							<option value="16">4PM - 5PM</option>
+							<option value="17" selected="selected">5PM - 6PM</option>
+							<option value="18">6PM - 7PM</option>
+							<option value="19">7PM - 8PM</option>
+							<option value="20">8PM - 9PM</option>
+							<option value="21">9PM - 10PM</option>
+							<option value="22">10PM - 11PM</option>
+							<option value="23">11PM - 12AM</option>
 						</select>
 					</div>
 				</div>
